[package]
name = "http_server"
version = "0.1.0"
authors = ["ohs80340"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.1.17"
serde_json = "1.0"
actix = "0.10"
actix-web-actors = "3.0.0"